TurtleProject/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
D:\BlueJ-windows-422\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
D:\BlueJ-windows-422\bluej\lib\bluejcore.jar;D:\BlueJ-windows-422\bluej\lib\junit-4.11.jar;D:\BlueJ-windows-422\bluej\lib\hamcrest-core-1.3.jar;D:\BlueJ-windows-422\bluej\lib\lang-stride.jar;D:\BlueJ-windows-422\bluej\lib\javafx\lib\javafx.base.jar;D:\BlueJ-windows-422\bluej\lib\javafx\lib\javafx.controls.jar;D:\BlueJ-windows-422\bluej\lib\javafx\lib\javafx.fxml.jar;D:\BlueJ-windows-422\bluej\lib\javafx\lib\javafx.graphics.jar;D:\BlueJ-windows-422\bluej\lib\javafx\lib\javafx.media.jar;D:\BlueJ-windows-422\bluej\lib\javafx\lib\javafx.properties.jar;D:\BlueJ-windows-422\bluej\lib\javafx\lib\javafx.swing.jar;D:\BlueJ-windows-422\bluej\lib\javafx\lib\javafx.web.jar;D:\School Files\APCS\GitHub\Turtle2020\TurtleProject
-d
D:\School Files\APCS\GitHub\Turtle2020\TurtleProject\doc
-encoding
UTF-8
-charset
UTF-8
D:\School Files\APCS\GitHub\Turtle2020\TurtleProject\bookClasses\SimpleSound.java
<---- end of javadoc command ---->
Loading source file D:\School Files\APCS\GitHub\Turtle2020\TurtleProject\bookClasses\SimpleSound.java...
Constructing Javadoc information...
D:\School Files\APCS\GitHub\Turtle2020\TurtleProject\bookClasses\SimpleSound.java:10: error: package javazoom.jl.converter does not exist
import javazoom.jl.converter.*;
^
1 error
